traefik/prometheus-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-prometheus
  namespace: production
  labels:
    app: traefik-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-prometheus
  template:
    metadata:
      labels:
        app: traefik-prometheus
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: traefik-prometheus
          image: prom/prometheus:latest
          imagePullPolicy: Always
          args: ["--config.file=/config/prometheus.yaml", "--storage.tsdb.path=/prometheus", "--storage.tsdb.retention.size=512MB"]
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /config/prometheus.yaml
              subPath: prometheus.yaml
            - name: state
              mountPath: /prometheus
              subPath: prometheus
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: traefik-metrics-pvc
        - name: config
          configMap:
            name: traefik-prometheus-config
            items:
              - key: prometheus.yaml
                path: prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-prometheus
  namespace: production
  labels:
    app: traefik-prometheus
spec:
  selector:
    app: traefik-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-grafana
  namespace: production
  labels:
    app: traefik-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-grafana
  template:
    metadata:
      labels:
        app: traefik-grafana
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: traefik-grafana
          image: grafana/grafana:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: state
              mountPath: /var/lib/grafana
              subPath: grafana/data
            - name: state
              mountPath: /etc/grafana/provisioning
              subPath: grafana/provisioning
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: traefik-metrics-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-grafana
  namespace: production
  labels:
    app: traefik-grafana
spec:
  selector:
    app: traefik-grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-grafana
  namespace: production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.staging.example.org`)
      kind: Rule
      services:
        - name: traefik-grafana
          port: 3000
  tls:
    secretName: example-org-tls
